<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Judul -->
        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginTop="8dp"
            android:text="@string/your_goals"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/back_navigation"
            android:src="@drawable/ic_back" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/circle_background"
                android:contentDescription="@string/choose_photo"
                android:scaleType="centerCrop"
                android:padding="4dp" />

            <TextView
                android:id="@+id/tv_choose_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_choose_photo"
                android:text="@string/choose_photo"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:padding="8dp"
                android:gravity="center" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvTujuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tujuan"
            android:textSize="16sp"
            android:textColor="#000"
            android:paddingTop="8dp"/>

        <EditText
            android:id="@+id/et_tujuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tujuan"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tvAnggaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berapa_anggaran"
            android:textSize="16sp"
            android:textColor="#000"
            android:paddingTop="8dp"/>

        <EditText
            android:id="@+id/et_anggaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_anggaran"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/tvPilihBulan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_bulan"
            android:textSize="16sp"
            android:textColor="#000"
            android:paddingTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_pilih_bulan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pilih_bulan"
                android:focusable="false"
                android:clickable="true"/>

            <ImageButton
                android:id="@+id/btn_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/open_calendar"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvKeterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:textSize="16sp"
            android:textColor="#000"
            android:paddingTop="8dp"/>

        <EditText
            android:id="@+id/et_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_keterangan"
            android:inputType="textMultiLine"
            android:lines="3"/>

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/simpan"
            android:textColor="#FFF"/>
    </LinearLayout>
</ScrollView>
