<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <!-- Header -->
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="8dp"
        android:text="@string/savings"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Tombol Kembali -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back_navigation"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />

    <!-- Pilih Tabungan -->
    <TextView
        android:id="@+id/tvPilihTabungan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_savings"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTabungan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPilihTabungan" />

    <!-- Input Field Anggaran -->
    <TextView
        android:id="@+id/tvBerapaAnggaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget_question"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerTabungan"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etAnggaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_budget_hint"
        android:inputType="numberDecimal"
        style="@style/EditTextUnderlineStyle"
        app:layout_constraintTop_toBottomOf="@id/tvBerapaAnggaran"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Pilih Tanggal -->
    <TextView
        android:id="@+id/tvPilihBulan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etAnggaran"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etTanggal"
        style="@style/EditTextUnderlineStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="false"
        android:drawableEnd="@drawable/ic_calendar"
        android:hint="@string/select_date_hint"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPilihBulan" />

    <!-- Input Field Keterangan -->
    <TextView
        android:id="@+id/tvKeterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTanggal" />

    <EditText
        android:id="@+id/etKeterangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description_hint"
        android:inputType="textMultiLine"
        style="@style/EditTextUnderlineStyle"
        app:layout_constraintTop_toBottomOf="@id/tvKeterangan"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Tombol Simpan -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/etKeterangan"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
