<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="8dp"
        android:text="@string/header_Income"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back_navigation"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />

    <TextView
        android:id="@+id/tvPilihTabungan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_tabungan"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTabungan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPilihTabungan" />

    <TextView
        android:id="@+id/tvBerapaAnggaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berapa_anggaran"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerTabungan"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etAnggaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_anggaran"
        android:inputType="numberDecimal"
        style="@style/EditTextUnderlineStyle"
        app:layout_constraintTop_toBottomOf="@id/tvBerapaAnggaran"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPilihBulan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_tanggal"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etAnggaran"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etTanggal"
        style="@style/EditTextUnderlineStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:drawableEnd="@drawable/ic_calendar"
        android:hint="@string/hint_tanggal"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPilihBulan" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/simpan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPilihBulan" />

</androidx.constraintlayout.widget.ConstraintLayout>
