<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <!-- Tombol Kembali -->
    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/back_navigation"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp" />

    <!-- Header untuk Expense -->

    <!-- Field Anggaran -->
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="4dp"
        android:text="@string/expense_header"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBerapaAnggaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/berapa_anggaran"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <EditText
        android:id="@+id/etAnggaran"
        style="@style/EditTextUnderlineStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_budget"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBerapaAnggaran" />

    <!-- Field Kategori -->
    <TextView
        android:id="@+id/tvPilihkategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/pilih_kategori"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAnggaran" />

    <Spinner
        android:id="@+id/spinnerTabungan"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPilihkategori" />

    <!-- Field Tanggal -->
    <TextView
        android:id="@+id/tvPilihBulan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/pilih_tanggal"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTabungan" />

    <EditText
        android:id="@+id/etTanggal"
        style="@style/EditTextUnderlineStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pilih_tanggal"
        android:inputType="none"
        android:drawableEnd="@drawable/ic_calendar"
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/tvPilihBulan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Field Keterangan -->
    <TextView
        android:id="@+id/tvKeterangan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/keterangan"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTanggal" />

    <EditText
        android:id="@+id/etKeterangan"
        style="@style/EditTextUnderlineStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_keterangan"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/tvKeterangan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Tombol Simpan -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        style="@style/ButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/etKeterangan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
